# KolyaGPTv2

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml
include/: kgpt_MSELoss.h  kgpt_ReLU.h  kgpt_add_vector_to_matrix.h  kgpt_addition.h  kgpt_binary_operation.h  kgpt_matrix.h  kgpt_matrix_data.h  kgpt_multiplication.h  kgpt_operation.h  kgpt_softmax.h  kgpt_subtraction.h  kgpt_unary_operation.h
tests/: fully_connected_test.cpp  fully_connected_test.h  gtest.cpp
